# rust_gpu_programing

./: Cargo.toml  README.md
src/: main.rs  test_shader.wgsl
