[package]
name = "rust_gpu_programing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.18"
futures = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] } #to put stuff into shader
tokio = { version = "1", features = ["full"] }
